<resources>
    <string name="app_name">E-Learning</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">LOGIN</string>
    <string name="Register">REGISTER</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="confirmpassword">ConformPassword</string>
    <string name="emailid">EmailID</string>
    <string name="mobileno">MobileNo</string>
    <string name="save">SAVE</string>
    <string name="not_registerd">Not Registerd?</string>
    <string name="register">REGISTER</string>
    <string name="admin">ADMIN</string>
    <string name="user_admin">Admin</string>
    <string name="_2nd_year">2nd Year</string>
    <string name="_3rd_year">3rd Year</string>
    <string name="_4th_year">4th Year</string>
    <string name="select_subject">Select Subject</string>
    <string name="acpld">ACPLD</string>
    <string name="dcfm">DCFM</string>
    <string name="cao">CAO</string>
    <string name="tfcs">TFCS</string>
    <string name="os">OS</string>
    <string name="sp">SP</string>
    <string name="oops">OOPS</string>
    <string name="dbms">DBMS</string>
    <string name="cg">CG</string>
    <string name="sepm">SEPM</string>
    <string name="ai">AI</string>
    <string name="dp">DP</string>
    <string name="dos">DOS</string>
    <string name="df">DF</string>
    <string name="ics">ICS</string>
    <string name="lp">LP</string>
    <string name="mcom">MCOM</string>
    <string name="tcpip">TCP/IP</string>
    <string name="select_option">Select Option</string>
    <string name="watch_video">Watch Video</string>
    <string name="upload_video">Upload Video</string>
    <string name="view_list">View List</string>
    <string name="approved_list">Approved List</string>
    <string name="save">SAVE</string>
</resources>
