<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background">


    <ImageView
        android:layout_width="110dp"
        android:layout_height="107dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/elearning" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/user"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:paddingLeft="2dp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/locked"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_Login"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
    </LinearLayout>



    <Button
        android:id="@+id/Button_Admin"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/admin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

     <TextView
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginTop="20dp"
         android:textColor="@color/colorPrimary"
         android:paddingLeft="55dp"
         android:text="@string/not_registerd"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="5dp"
            android:textStyle="bold"
            android:textColor="#04ea00"
            android:text="@string/register"/>

    </LinearLayout>

</LinearLayout>

